--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app" class="app"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
