--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title></title>
+  <title>Dock Forge | Dock and pier visual design tool</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <meta name="description" content="">
+  <meta name="description" content="A visual design tool for designing dock and piers. Free and easy for anyone to use.">
 </head>
 <body>
   <div id="app" class="app"></div>
